# csv-payment-engine

./: .gitignore  Cargo.toml  README.md
data/: chargeback.csv  dispute.csv  duplicated-transaction.csv  invalid-chargeback.csv  invalid-dispute.csv  invalid-resolve.csv  missing-amount-deposit.csv  missing-amount-withdraw.csv  resolve.csv  unknown-transaction.csv  withdraw-or-withdrawal.cvs
src/: engine.rs  error.rs  lib.rs  main.rs
src/types/: client.rs  mod.rs  transaction.rs
